--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link rel="stylesheet" href="main.css">
   <title>Resume 1</title>
-  <h1>BRAD WEATHERYBY</h1>
+  <h1>BRAD WEATHERBY</h1>
 </head>
 <body>
   div
