--- a/index.html
+++ b/index.html
@@ -7,9 +7,21 @@
   <link rel="stylesheet" href="main.css">
   <title>Resume 1</title>
   <h1>BRAD WEATHERBY</h1>
+  <p></p>
 </head>
 <body>
-  div
+    <div id="WGD">
+      <h3>Winhart Garage Doors</h3><br><h2>January 2023-present</h2>
+      <p>I own this business and have done well since the start of the year, however i have decided to enter software development for job security and to protect myself and my family from me getting to old to hang doors and run a business the way it should be ran.</p></div>
+    <div id="GG">
+      <h3>Glass Guru</h3>
+      <p></p></div>
+    <div id="PGD">
+      <h3>Precision Garage Doors</h3>
+      <p></p></div>
+    <div id="DET">
+      <h3>D.E.T. Distributing</h3>
+      <p></p></div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   <script src="main.js"></script>
 </body>
