added job descriptions to p, changed h2 and h3 around,changed colors, added borders to divs

--- a/index.html
+++ b/index.html
@@ -10,18 +10,20 @@
   <p></p>
 </head>
 <body>
+  <div><h2>Bio</h2><p>I have worked in garage doors for about the last decade, own my own business, am compentent in at least 5 trades, love a good challenge and a long days work, and will also sneak away to golf any chance i get.</p></div>
     <div id="WGD">
-      <h3>Winhart Garage Doors</h3><br><h2>January 2023-present</h2>
-      <p>I own this business and have done well since the start of the year, however i have decided to enter software development for job security and to protect myself and my family from me getting to old to hang doors and run a business the way it should be ran.</p></div>
+      <h2>Winhart Garage Doors</h2><br><h3>January 2023-present</h3>
+      <p>I own this business and have done well since the start of the year, however i have decided to enter software development for job security and to protect myself and my family from me getting to old to hang doors and run a business the way it should be ran. I usually replace around 10 doors a week in peoples homes for other companies in middle Tennessee, as I am the owner and only employee i do all the work myself, there isn't much marketing involved as most of my work is subcontract and done through other companies. I do spend a fair amount of time on the phone giving advice to other door guys and getting jobs that way. Overall i do love what i do but it's time for a change.</p></div>
     <div id="GG">
-      <h3>Glass Guru</h3>
-      <p></p></div>
+      <h2>Glass Guru</h2><br><h3>June 2022-January 2023</h3>
+      <p>This was the first business i bought into, i was technically the owner here but i don't count it as my first business since i bought it from a friend that needed some help. Here i would cut glass, replace broken windows, make glass items in house, and also network, manage finances, handle all orders, and do any general maintence. I was the only person working here after a short time.</p></div>
     <div id="PGD">
-      <h3>Precision Garage Doors</h3>
-      <p></p></div>
+      <h2>Precision Garage Doors</h2><br><h3></h3>
+      <p>This is where i cut my garage door teeth. My  years here were some of the best of my life. The pay was generous, the schedule was awesome, and it afforded me the oppurtunity to own my own business. I started here and only had basic construction knowledge. I was a technician the first two years and learned how to repair doors and devices attached to them. After two years i was promoted to an installer position which was absolutely amazing, I would typically hang 2 doors a day and became trusted with all the bigger and custom jobs on hold so i got to see a lot of neat things. </p></div>
+      
     <div id="DET">
-      <h3>D.E.T. Distributing</h3>
-      <p></p></div>
+      <h2>D.E.T. Distributing</h2><br><h3></h3>
+      <p>D.E.T was an awesome place to work, i spent a few years here delivering beer products and driving medium to large trucks, i also got my CDL through here. Most days consisted of getting to the warehouse around 3 am where my truck was already loaded, then taking the beer around to several businesses, unloading the product, stocking and date checking the stores inventory, and returning to the warehouse.</p></div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   <script src="main.js"></script>
 </body>
